# prezentation-feedback-agent

./: .env.example  .gitignore  README.md  app_streamlit.py  cli.py  pyproject.toml
doc/: DESIGN.md  basic_design.md  detailed_design.md  status.md
presentation_feedback/: __init__.py
presentation_feedback/agents/: __init__.py  content_analyzer.py  orchestrator.py  speech_analyzer.py  utils.py
presentation_feedback/core/: __init__.py  audio_features.py  cost_tracker.py  transcriber.py
presentation_feedback/demo/: __init__.py  agents.py  audio_features.py  data.py  transcriber.py
scripts/: setup_s3_bucket.py
